--- a/src/styles/ui.less
+++ b/src/styles/ui.less
@@ -5,8 +5,24 @@
 // 4. 在 App.vue 中引入这个文件
 // 5. 在组件内需要改样式的元素的父元素加上这个类名
 .m-choose-icon-dialog-body-height {
-    .el-dialog__body {
-        height: 500px;
-        overflow: auto;
-    }
+  .el-dialog__body {
+    height: 500px;
+    overflow: auto;
+  }
+}
+
+.list-tabs__item {
+  .el-tabs__nav {
+    width: 100%;
+    display: flex;
+  }
+
+  .el-tabs__item {
+    flex: 1;
+    text-align: center;
+  }
+}
+
+.notification-popper {
+  padding: 0 !important;
 }
